--- a/ff.html
+++ b/ff.html
@@ -41,7 +41,7 @@
             width: 100%;
         }
             body{
-                background-image:url("file:///C:/web/images.jpg") ;
+                background-image:url("file:///C:/Users/Farhaz/Documents/GitHub/digitechnagpur/images.jpg") ;
                 background-repeat:no-repeat;
                 background-size:cover;
                 text-align: center;
